Mon Dec 15 23:21:56 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/gxkparam.c (gxk_param_create_editor): prevent
	value changes during editor widget creation.

Mon Dec 15 18:51:05 2003  Tim Janik  <timj@gtk.org>

	* configure.in: add note to translators about docs/site-development.texi.

	* docs/site-development.texi: added links to translation status pages.

Mon Dec 15 15:03:58 2003  Tim Janik  <timj@gtk.org>

	* merged po/ with po-bse/. remove the po-bse/ directory.

Sat Dec 13 19:18:30 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* bsw/bswcxxutils.h: Added missing const to sfi_value_get_cxxstring.

Thu Dec 11 00:25:39 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/dialogs/gadgets-standard.xml: don't create labels
	from $label for xdef:button if ignore-label is set.
	set ignore-label for xdef:labeled-tool-area and xdef:label-image-button,
	since they create their own labels from $label.

Wed Dec 10 19:27:33 2003  Tim Janik  <timj@gtk.org>

	* ltmain.sh: update to libtool 1.5.0a + debian patches.
	
	* beast-gtk/bstutils.[hc]: remove atail and ahead slots from gmask.
	removed BST_GMASK_FILL, bst_gmask_quick() simply uses BST_GMASK_INTERLEAVE.

	* beast-gtk/gxk/gxkauxwidgets.c: added second arrow to menu button.

	* beast-gtk/bstwaveeditor.c: change default zoom level to 0.5.

	* beast-gtk/bstfreeradiobutton.[hc]: removed, there's a freely
	togglable radio button in Gxk.

Wed Dec 10 08:34:10 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/Makefile.am: define GXK_COMPILATION when compiling GXK.

	* beast-gtk/gxk/gxkglobals.h: provide i18n macros for GXK_COMPILATION.

	* beast-gtk/gxk/gxkparam.[hc]: relicensed LGPL.
	reused parts of the BstParam implementation to implement GxkParam.
	GxkParam is a compound consisting of a pspec, a value and a binding
	(to the target affected by the value).
	imlpemented simple in-param GValue binding.
	implemented seperate GxkParamEditor interface which allowes creation
	of editing widgets for GxkParams.