@@ -65,6 +65,7 @@ enum {
   BST_ACTION_SHOW_PREFERENCES,
   BST_ACTION_SHOW_PROC_BROWSER,
   BST_ACTION_SHOW_DEVICE_MONITOR,
+  BST_ACTION_EXTRA_VIEW,
   /* help dialogs */
 #define BST_ACTION_HELP_FIRST   BST_ACTION_HELP_FAQ
   BST_ACTION_HELP_FAQ,
